--- a/README
+++ b/README
@@ -2,3 +2,30 @@ Doctrine ORM Extension for Silex
 ================================
 This extension sets up Doctrine ORM for Silex by reusing the database connection established with the DBAL extension.
 
+
+Installation
+------------
+
+cd /path/to/silex_project/vendor
+git clone git@github.com:mjakubowski/nutwerk-orm-extension.git
+
+Download Doctrine ORM package to /path/to/silex_project/vendor/doctrine2-orm
+
+Edit your index.php:
+
+$app['autoloader']->registerNamespace('Nutwerk', __DIR__.'/vendor/nutwerk-orm-extension/lib');
+$app->register(new Nutwerk\Extension\DoctrineORMExtension(), array(
+    'db.orm.class_path'            => __DIR__.'/vendor/doctrine2-orm/lib',
+    'db.orm.proxies_dir'           => __DIR__.'/var/cache/doctrine/Proxy',
+    'db.orm.proxies_namespace'     => 'DoctrineProxy',
+    'db.orm.auto_generate_proxies' => true,
+    'db.orm.entities'              => array(array(
+        'type'      => 'annotation', 
+        'path'      => __DIR__.'/app', 
+        'namespace' => 'Entity',
+    )),
+));
+
+
+By default this setup assumes you put your entities beneath app/Entity/*
+
