--- a/README
+++ b/README
@@ -29,3 +29,4 @@ $app->register(new Nutwerk\Extension\DoctrineORMExtension(), array(
 
 By default this setup assumes you put your entities beneath app/Entity/*
 
+The EntityManager will be available by $app['db.orm.em']
