--- a/README
+++ b/README
@@ -16,6 +16,7 @@ Edit your index.php:
 $app['autoloader']->registerNamespace('Nutwerk', __DIR__.'/vendor/nutwerk-orm-extension/lib');
 $app->register(new Nutwerk\Extension\DoctrineORMExtension(), array(
     'db.orm.class_path'            => __DIR__.'/vendor/doctrine2-orm/lib',
+    'db.orm.cache'                 => new Doctrine\Common\Cache\ApcCache(),
     'db.orm.proxies_dir'           => __DIR__.'/var/cache/doctrine/Proxy',
     'db.orm.proxies_namespace'     => 'DoctrineProxy',
     'db.orm.auto_generate_proxies' => true,
